Bug 312972 - Words 2.6 RC2 crashes on clicking the Edit icon in the char/paragraph style combobox
Summary: Words 2.6 RC2 crashes on clicking the Edit icon in the char/paragraph style c...
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2013-01-09 21:15 UTC by Friedrich W. H. Kossebau
Modified: 2013-01-10 17:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Friedrich W. H. Kossebau 2013-01-09 21:15:09 UTC
Application: calligrawords (2.6 RC2)
KDE Platform Version: 4.9.5 "release 7"
Qt Version: 4.8.4
Operating System: Linux 3.4.11-2.16-desktop x86_64
Distribution: "openSUSE 12.2 (x86_64)"

-- Information about the crash:
Started Words, created empty document from "Blank" template.
Then pulled down the menu of the Paragraph style (same with Character style) combobox, moved the mouse cursor above a style's edit button, clicked that.
*Crash*

The crash can be reproduced every time.

-- Backtrace:
Application: Calligra Words (calligrawords), signal: Aborted
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7feeaad8c780 (LWP 6436))]

Thread 2 (Thread 0x7fee87358700 (LWP 6437)):
#0  0x00007feea41da14f in poll () from /lib64/libc.so.6
#1  0x00007fee9f78fac4 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fee9f78fbe4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#3  0x00007feea5081136 in QEventDispatcherGlib::processEvents (this=0x7fee800008c0, flags=...) at kernel/qeventdispatcher_glib.cpp:426
#4  0x00007feea505194f in QEventLoop::processEvents (this=this@entry=0x7fee87357dd0, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007feea5051bd8 in QEventLoop::exec (this=0x7fee87357dd0, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007feea4f540b0 in QThread::exec (this=<optimized out>) at thread/qthread.cpp:542
#7  0x00007feea50320bf in QInotifyFileSystemWatcherEngine::run (this=0x23e70c0) at io/qfilesystemwatcher_inotify.cpp:256
#8  0x00007feea4f5708c in QThreadPrivate::start (arg=0x23e70c0) at thread/qthread_unix.cpp:338
#9  0x00007feea4cc0e0e in start_thread () from /lib64/libpthread.so.0
#10 0x00007feea41e22cd in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7feeaad8c780 (LWP 6436)):
[KCrash Handler]
#6  0x00007feea4132d25 in raise () from /lib64/libc.so.6
#7  0x00007feea41341a8 in abort () from /lib64/libc.so.6
#8  0x00007feea4f4cc14 in qt_message_output (msgType=msgType@entry=QtFatalMsg, buf=<optimized out>) at global/qglobal.cpp:2323
#9  0x00007feea4f4cdc8 in qt_message(QtMsgType, const char *, typedef __va_list_tag __va_list_tag *) (msgType=msgType@entry=QtFatalMsg, msg=msg@entry=0x7feea50b5a98 "ASSERT failure in %s: \"%s\", file %s, line %d", ap=ap@entry=0x7fffcc6aefa8) at global/qglobal.cpp:2369
#10 0x00007feea4f4cf54 in qFatal (msg=msg@entry=0x7feea50b5a98 "ASSERT failure in %s: \"%s\", file %s, line %d") at global/qglobal.cpp:2552
#11 0x00007feea4f4cf7e in qt_assert_x (where=<optimized out>, what=<optimized out>, file=<optimized out>, line=<optimized out>) at global/qglobal.cpp:2026
#12 0x00007fee8a00a35d in QList<int>::at (this=0x26d9df0, i=0) at /usr/include/QtCore/qlist.h:469
#13 0x00007fee8a00944e in StylesModel::firstStyleIndex (this=0x26d9de0) at /home/kossebau/Daten/Projekte/Calligra/calligra/plugins/textshape/dialogs/StylesModel.cpp:493
#14 0x00007fee8a00e452 in StyleManager::setStyleManager (this=0x21b5ac0, sm=0x21063d0) at /home/kossebau/Daten/Projekte/Calligra/calligra/plugins/textshape/dialogs/StyleManager.cpp:124
#15 0x00007fee8a012e15 in StyleManagerDialog::setStyleManager (this=0x28488c0, sm=0x21063d0) at /home/kossebau/Daten/Projekte/Calligra/calligra/plugins/textshape/dialogs/StyleManagerDialog.cpp:89
#16 0x00007fee89fba5b1 in TextTool::showStyleManager (this=0x2a45940, styleId=145) at /home/kossebau/Daten/Projekte/Calligra/calligra/plugins/textshape/TextTool.cpp:2465
#17 0x00007fee89fbe6bc in TextTool::qt_static_metacall (_o=0x2a45940, _c=QMetaObject::InvokeMetaMethod, _id=42, _a=0x7fffcc6af3a0) at /home/kossebau/Daten/Projekte/Calligra/build.debug/calligra/plugins/textshape/TextTool.moc:212
#18 0x00007feea50680ff in QMetaObject::activate (sender=0x3245270, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffcc6af3a0) at kernel/qobject.cpp:3548
#19 0x00007fee89fdcdde in SimpleParagraphWidget::showStyleManager (this=0x3245270, _t1=145) at /home/kossebau/Daten/Projekte/Calligra/build.debug/calligra/plugins/textshape/SimpleParagraphWidget.moc:149
#20 0x00007fee89fdc992 in SimpleParagraphWidget::slotShowStyleManager (this=0x3245270, index=39) at /home/kossebau/Daten/Projekte/Calligra/calligra/plugins/textshape/dialogs/SimpleParagraphWidget.cpp:324
#21 0x00007fee89fdcb84 in SimpleParagraphWidget::qt_static_metacall (_o=0x3245270, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0x7fffcc6af5a0) at /home/kossebau/Daten/Projekte/Calligra/build.debug/calligra/plugins/textshape/SimpleParagraphWidget.moc:77
#22 0x00007feea50680ff in QMetaObject::activate (sender=0x3281dc0, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffcc6af5a0) at kernel/qobject.cpp:3548
#23 0x00007fee89fd6aae in StylesCombo::showStyleManager (this=0x3281dc0, _t1=39) at /home/kossebau/Daten/Projekte/Calligra/build.debug/calligra/plugins/textshape/StylesCombo.moc:149
#24 0x00007fee89fd65ae in StylesCombo::slotShowDia (this=0x3281dc0, index=...) at /home/kossebau/Daten/Projekte/Calligra/calligra/plugins/textshape/dialogs/StylesCombo.cpp:186
#25 0x00007fee89fd6818 in StylesCombo::qt_static_metacall (_o=0x3281dc0, _c=QMetaObject::InvokeMetaMethod, _id=7, _a=0x7fffcc6af7b0) at /home/kossebau/Daten/Projekte/Calligra/build.debug/calligra/plugins/textshape/StylesCombo.moc:76
#26 0x00007feea50680ff in QMetaObject::activate (sender=0x328d100, m=<optimized out>, local_signal_index=<optimized out>, argv=0x7fffcc6af7b0) at kernel/qobject.cpp:3548
#27 0x00007fee89f9bf8f in StylesDelegate::styleManagerButtonClicked (this=0x328d100, _t1=...) at /home/kossebau/Daten/Projekte/Calligra/build.debug/calligra/plugins/textshape/moc_StylesDelegate.cpp:108
#28 0x00007fee8a00d25b in StylesDelegate::editorEvent (this=0x328d100, event=0x7fffcc6b0220, model=0x3280ee0, optionV1=..., index=...) at /home/kossebau/Daten/Projekte/Calligra/calligra/plugins/textshape/dialogs/StylesDelegate.cpp:180
#29 0x00007fee89fd6543 in StylesCombo::eventFilter (this=0x3281dc0, object=0x32824b0, event=0x7fffcc6b0220) at /home/kossebau/Daten/Projekte/Calligra/calligra/plugins/textshape/dialogs/StylesCombo.cpp:179
#30 0x00007feea5052d66 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=<optimized out>, receiver=0x32824b0, event=0x7fffcc6b0220) at kernel/qcoreapplication.cpp:1056
#31 0x00007feea5f2e82c in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#32 0x00007feea5f3353b in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/libQtGui.so.4
#33 0x00007feeaa5d6a68 in KoApplication::notify (this=0x7fffcc6b0da0, receiver=0x32824b0, event=0x7fffcc6b0220) at /home/kossebau/Daten/Projekte/Calligra/calligra/libs/main/KoApplication.cpp:504
#34 0x00007feea5052bfe in QCoreApplication::notifyInternal (this=0x7fffcc6b0da0, receiver=0x32824b0, event=0x7fffcc6b0220) at kernel/qcoreapplication.cpp:946
#35 0x00007feea5f2f69b in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool) () from /usr/lib64/libQtGui.so.4
#36 0x00007feea5fa9d1c in ?? () from /usr/lib64/libQtGui.so.4
#37 0x00007feea5fa8be1 in QApplication::x11ProcessEvent(_XEvent*) () from /usr/lib64/libQtGui.so.4
#38 0x00007feea5fcef72 in ?? () from /usr/lib64/libQtGui.so.4
#39 0x00007fee9f78f7f5 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#40 0x00007fee9f78fb28 in ?? () from /usr/lib64/libglib-2.0.so.0
#41 0x00007fee9f78fbe4 in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#42 0x00007feea5081116 in QEventDispatcherGlib::processEvents (this=0x1cefb80, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#43 0x00007feea5fcebee in ?? () from /usr/lib64/libQtGui.so.4
#44 0x00007feea505194f in QEventLoop::processEvents (this=this@entry=0x7fffcc6b0d60, flags=...) at kernel/qeventloop.cpp:149
#45 0x00007feea5051bd8 in QEventLoop::exec (this=0x7fffcc6b0d60, flags=...) at kernel/qeventloop.cpp:204
#46 0x00007feea5056878 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1218
#47 0x00007feeaa98a40c in kdemain (argc=1, argv=0x7fffcc6b0f88) at /home/kossebau/Daten/Projekte/Calligra/calligra/words/part/main.cpp:43
#48 0x0000000000400a3e in main (argc=1, argv=0x7fffcc6b0f88) at /home/kossebau/Daten/Projekte/Calligra/build.debug/calligra/words/part/calligrawords_dummy.cpp:3

Reported using DrKonqi
Comment 1 Friedrich W. H. Kossebau 2013-01-09 21:22:00 UTC
Also crashes when selecting "Styles > Style Manager..." in the menu, with similar backtrace.
Comment 2 Pierre Stirnweiss 2013-01-10 17:51:26 UTC
Git commit 04b31d9919116670fac973855c0a61d98ef7aed6 by Pierre Stirnweiss.
Committed on 10/01/2013 at 18:43.
Pushed by pstirnweiss into branch 'calligra/2.6'.

Fix crash on opening StyleManager dialog.

If the styleList is empty, return an invalid style.

M  +3    -0    plugins/textshape/dialogs/StylesModel.cpp

http://commits.kde.org/calligra/04b31d9919116670fac973855c0a61d98ef7aed6