Fix crash on opening StyleManager dialog.

If the styleList is empty, return an invalid style.

BUG: 312972